--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tischtennis Rangliste</title>
+    <title>v1.0 Tischtennis Rangliste</title>
     <style>
         table {
             width: 100%;
