--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>v1.0 Tischtennis Turnier - Aktueller Stand</title>
+    <title>Tischtennis Turnier - Aktueller Stand</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,6 +80,7 @@
         const scheduleTable = document.getElementById('scheduleTable').querySelector('tbody');
         const rankingTable = document.getElementById('rankingTable').querySelector('tbody');
 
+        // Funktion zum Laden der Teams und des Spielplans
         function loadTeamsAndSchedule() {
             // Teams aus Firebase laden
             get(ref(db, 'teams')).then(snapshot => {
@@ -124,7 +125,7 @@
                         const [team1, team2] = [match.team1, match.team2];
                         const results = match.result;
 
-                        // Initialisiere Team-Statistiken
+                        // Initialisiere Team-Statistiken, wenn noch nicht vorhanden
                         if (!teamStats[team1]) {
                             teamStats[team1] = { wins: 0, losses: 0, diff: 0, scored: 0, conceded: 0 };
                         }
@@ -132,38 +133,32 @@
                             teamStats[team2] = { wins: 0, losses: 0, diff: 0, scored: 0, conceded: 0 };
                         }
 
-                        // Berechnung der Ergebnisse
-                        results.forEach(result => {
-                            if (result) {
-                                const [score1, score2] = result.split('-').map(Number);
+                        // Berechnung der Gesamtergebnisse (2:0 oder 0:2)
+                        const [score1, score2] = results[0].split('-').map(Number); // Annahme: 1. Satz gibt das Ergebnis an
 
-                                // Punkte addieren
-                                teamStats[team1].scored += score1;
-                                teamStats[team1].conceded += score2;
-                                teamStats[team2].scored += score2;
-                                teamStats[team2].conceded += score1;
+                        // Ergebnisse für Team 1 und Team 2
+                        if (score1 > score2) {
+                            // Team 1 gewinnt das Spiel
+                            teamStats[team1].wins += 2;  // 2 Punkte für den Sieg
+                            teamStats[team2].losses += 2; // 0 Punkte für die Niederlage
+                        } else if (score2 > score1) {
+                            // Team 2 gewinnt das Spiel
+                            teamStats[team2].wins += 2;  // 2 Punkte für den Sieg
+                            teamStats[team1].losses += 2; // 0 Punkte für die Niederlage
+                        }
 
-                                // Siege und Niederlagen berechnen
-                                if (score1 > score2) {
-                                    teamStats[team1].wins += 1;
-                                    teamStats[team2].losses += 1;
-                                } else if (score2 > score1) {
-                                    teamStats[team2].wins += 1;
-                                    teamStats[team1].losses += 1;
-                                }
-                            }
-                        });
-
-                        // Differenz aktualisieren
-                        teamStats[team1].diff += teamStats[team1].scored - teamStats[team1].conceded;
-                        teamStats[team2].diff += teamStats[team2].scored - teamStats[team2].conceded;
+                        // Punkte zählen
+                        teamStats[team1].scored += score1;
+                        teamStats[team2].scored += score2;
+                        teamStats[team1].conceded += score2;
+                        teamStats[team2].conceded += score1;
                     });
 
                     // Rangliste sortieren und anzeigen
                     const sortedTeams = Object.entries(teamStats)
                         .map(([team, stats]) => ({
                             team,
-                            points: `${stats.wins * 2}:${stats.losses * 2}`,
+                            points: `${stats.wins}:${stats.losses}`,
                             games: `${stats.wins + stats.losses}`,
                             diff: stats.diff,
                             scored: stats.scored,
